--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js"></script>
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io('https://randomchat-ryje.onrender.com');
         const chatBody = document.getElementById('chat-body');
         const messageInput = document.getElementById('message-input');
         const sendBtn = document.getElementById('send-btn');
