--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Chat</title>
+    <title>Mallu Random Chat</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XQ3709G71Z"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XQ3709G71Z');
+    </script>
     <style>
         * {
             margin: 0;
@@ -134,7 +142,7 @@
 </head>
 <body>
     <div class="chat-container">
-        <div class="chat-header">Random Chat</div>
+        <div class="chat-header">Mallu Random Chat</div>
         <div id="status">Connecting...</div>
         <div class="chat-body" id="chat-body"></div>
         <div class="chat-footer">
@@ -197,6 +205,10 @@
                 addMessage(text, 'you');
                 socket.emit('message', text);
                 messageInput.value = '';
+                gtag('event', 'send_message', {
+                    'event_category': 'engagement',
+                    'event_label': 'Chat Message'
+                });
             }
         });
 
