Update and rename landing.html to index.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <header>
             <h1>Welcome to Mallu Random Chat</h1>
             <p>Connect with strangers worldwide, infused with the vibrant spirit of South India. Chat anonymously, have fun, and make new friends instantly!</p>
-            <a href="https://randomchat-ryje.onrender.com" class="cta-button">Start Chatting Now</a>
+            <a href="https://randomchat-ryje.onrender.com/chat.html" class="cta-button">Start Chatting Now</a>
         </header>
 
         <section class="features">
